--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
             <div class="contentpj1">
               <h3 class="cvcanhan">CV CÁ nhân</h3>
               <div class="pj11">
-              <div><P class="insidebox">2021</P></div>
+              <div><P class="recent">2021</P></div>
                 <td><i class="icon-user-1"></i></td>
                 <p>FUNIX</p>
               <td><i class="icon-lamp"></i></td>
@@ -319,7 +319,7 @@
             <div class="contentpj1">
               <h3 class="cvcanhan">trang web quản lý thú cưng</h3>
               <div class="pj11">
-              <div><P class="insidebox">2021</P></div>
+              <div><P class="recent">2021</P></div>
                 <td><i class="icon-user-1"></i></td>
                 <p>FUNIX</p>
               <td><i class="icon-lamp"></i></td>
@@ -352,7 +352,7 @@
             <div class="contentpj1">
               <h3 class="cvcanhan">Trang web xem tin tức</h3>
               <div class="pj11">
-              <div><P class="insidebox">2021</P></div>
+              <div><P class="recent">2021</P></div>
                 <td><i class="icon-user-1"></i></td>
                 <p>FUNIX</p>
               <td><i class="icon-lamp"></i></td>
