--- a/index.html
+++ b/index.html
@@ -25,23 +25,23 @@
 
     <section id="nav-bar">
       <nav class="container1">
-        <div>
+        <div class="nn1">
           <i class="icon-user"></i
           ><a href="#">Thông tin</a>
         </div>
-        <div>
+        <div class="nn1">
           <i class="icon-doc-text-inv"></i
           ><a href="#">Lý lịch</a>
         </div>
-        <div>
+        <div class="nn1">
           <h1 class="name1">Dương Thanh Bình</h1>
           <p>Fullstack Developer</p>
         </div>
-        <div>
+        <div class="nn1">
           <i class="icon-mail-alt"></i
           ><a href="#">Chứng chỉ</a>
         </div>
-        <div>
+        <div class="nn1">
           <i class="icon-star-1"></i>
           <a href="#">Dự Án</a>
         </div>
